--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,17 @@
 [[headers]]
   for = "/*.js"
   [headers.values]
-    "Content-Type" = "application/javascript"
+    Content-Type = "application/javascript"
+
+[[headers]]
+  for = "/*.mjs"
+  [headers.values]
+    Content-Type = "application/javascript"
+
+[[headers]]
+  for = "/*.jsx"
+  [headers.values]
+    Content-Type = "application/javascript"
 
 [[redirects]]
   from = "/*"
